--- a/templates/page.html
+++ b/templates/page.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="/assets/logo.png" alt="Logo" height="120" />
+            <img src="/logo.png" alt="Logo" height="120" />
             <div>
                 <h1>Thesis</h1>
                 <h2>Scientia potentia est</h2>
