--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css");
-
 :root {
     --color-1: #edb612;
     --color-2: #b01c25;
@@ -10,39 +9,33 @@
 
     --font-family: "Montserrat", sans-serif;
 }
-
 body {
     background-color: var(--color-3);
     color: var(--color-4);
     text-align: center;
     font-family: var(--font-family);
 }
-
 a {
     color: var(--color-1);
+    text-decoration: none;
 }
-
 header {
     display: flex;
     background-color: var(--color-2);
     justify-content: center;
     padding-inline: 0.5em;
 }
-
 header div {
     padding-inline: 1em;
 }
-
 nav ul {
     display: flex;
     justify-content: center;
     padding: 0;
 }
-
 nav ul li {
     list-style: none;
 }
-
 nav a {
     padding: 0.5em;
     margin: 0.1em;
@@ -51,11 +44,9 @@ nav a {
     border-radius: 5px;
     font-weight: bold;
 }
-
 p {
     padding-block: 0.5em;
 }
-
 input,
 button {
     padding: 0.5em 1em;
@@ -67,17 +58,22 @@ button {
     border: none;
     border-radius: 3px;
 }
-
-article#view {
+section {
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+article {
+    display: inline-block;
     max-width: 769px;
     margin-inline: auto;
 }
-
 pre a {
     font-variant: small-caps;
 }
-
-/* MUNDUS */
-.mundus svg {
-    width: 100%;
+th {
+    vertical-align: top;
+    text-align: right;
+}
+td {
+    padding-bottom: 0.5em;
 }
