--- a/static/styles.css
+++ b/static/styles.css
@@ -77,3 +77,15 @@ th {
 td {
     padding-bottom: 0.5em;
 }
+.update {
+    max-width: 30ch;
+    display: inline-block;
+    margin: 0.5em;
+    padding: 0.5em;
+    border: 1px solid var(--color-5);
+    border-radius: 3px;
+    text-align: left;
+}
+.update a {
+    font-variant: small-caps;
+}
