--- a/static/styles.css
+++ b/static/styles.css
@@ -81,6 +81,7 @@ td {
     border: 1px solid var(--color-5);
     border-radius: 3px;
     text-align: left;
+    margin-bottom: 1.5em;
 }
 .update a {
     font-variant: small-caps;
