--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -5,6 +5,7 @@
 :root {
     --bg-color: #222;
     --font-color: #dedede;
+    --font-color-alt: #777;
     --color-primary: #b01c25;
     --color-secondary: #edb612;
 
