--- a/assets/base.pug
+++ b/assets/base.pug
@@ -10,6 +10,11 @@ html(lang="lat")
         link(rel="stylesheet", href="/assets/style.css")
         script(src="https://unpkg.com/htmx.org@2.0.3")
         block head
+        script(
+            async
+            crossorigin="anonymous"
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1552191203398756"
+        )
 
     body 
         include header
